--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,11 @@ robotpy_version = "2025.3.2.1"
 # Which extra RobotPy components should be installed
 # -> equivalent to `pip install robotpy[extra1, ...]
 robotpy_extras = [
-    "phoenix5",
     # "apriltag",
-    # "commands2",
+    "commands2",
     # "cscore",
     # "pathplannerlib",
+    "phoenix5",
     # "phoenix6",
 ]
 
